moved mac build profile to parent pom