@@ -18,6 +18,7 @@
 		<eclemma.instrument.bundles>
 			org.eclipse.recommenders.commons.utils,org.eclipse.recommenders.commons.utils.gson
 		</eclemma.instrument.bundles>
+		<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
 	</properties>
 	
 	<repositories>
@@ -40,6 +41,20 @@
 
 
 	<profiles>
+		<profile>
+			<id>mac</id>
+			<activation>
+				<os>
+					<family>unix</family>
+					<name>mac os x</name>
+				</os>
+			</activation>
+			<properties>
+				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
+			</properties>
+		</profile>
+	
+	
 		<profile>
 			<id>build-number</id>
 			<activation>
